// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppInstallations should match a snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="ecbqyq6-el-snack-holder"
      />
      <div
        class="e1q0zwo9-el-flex-justify-between e2kmzjs-el-flex-container"
      >
        <h1
          class="evblxhy-el-title"
        >
          Installations
        </h1>
      </div>
      <p
        class="e11jaxfn-el-has-grey-text etrchfm-el-has-section-margin e15ggth7-el-body-text"
      >
        The table below gives you the information you need to understand Reapit Client organisations that have installed your application for use. In addition, you can force terminate a customer installation by using the call to action on each row. For more information on the installations table
        <a>
           see here
        </a>
        .
      </p>
      <div
        class="ec47sgk-el-mb11 elkdvoz-el-table"
        data-has-call-to-action="true"
        data-has-expandable-action="false"
        data-num-columns-excl-action-col="5"
      >
        <div
          class="e1co3p83-el-table-headers-row"
        >
          <div
            class="e1qy4g2u-el-table-header"
          >
            Customer Name
          </div>
          <div
            class="e1qy4g2u-el-table-header"
          >
            Reapit Customer Code
          </div>
          <div
            class="e1qy4g2u-el-table-header"
          >
            Customer Address
          </div>
          <div
            class="e1qy4g2u-el-table-header"
          >
            Date Installed
          </div>
          <div
            class="e1qy4g2u-el-table-header"
          >
            Installed By
          </div>
          <div
            class="e1qy4g2u-el-table-header"
          >
            Uninstall
          </div>
        </div>
        <div
          class="e1gfmg2g-el-table-row-container"
        >
          <div
            class="es3tf1j-el-table-row"
          >
            <div
              class="eqy88gj-el-table-cell-has-dark-text e4zpaja-el-table-cell"
            >
              <span
                class="epibvz0-el-intent-secondary ej9yrfo-el-icon"
              >
                <svg
                  fill="none"
                  height="1em"
                  viewBox="0 0 20 20"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M20 20H11V4H20V16.264V20Z"
                    fill="#7BC9EB"
                  />
                  <path
                    d="M13 2H11.3572L10 9.05535L11.3574 20H13V2Z"
                    fill="#0061A8"
                  />
                  <path
                    d="M1.27977 0V1.78715H0V20H12V0H1.27977Z"
                    fill="#23A4DE"
                  />
                  <path
                    d="M3.61719 4.50488H5.14902V6.38001H3.61719V4.50488Z"
                    fill="#F3FFFB"
                  />
                  <path
                    d="M7.43005 4.50488H8.96188V6.38001H7.43005V4.50488Z"
                    fill="#F3FFFB"
                  />
                  <path
                    d="M3.61719 8.25513H5.14902V10.1303H3.61719V8.25513Z"
                    fill="#F3FFFB"
                  />
                  <path
                    d="M7.43005 8.25513H8.96188V10.1303H7.43005V8.25513Z"
                    fill="#F3FFFB"
                  />
                  <path
                    d="M3.61719 12.0056H5.14902V13.8807H3.61719V12.0056Z"
                    fill="#F3FFFB"
                  />
                  <path
                    d="M7.43005 12.0056H8.96188V13.8807H7.43005V12.0056Z"
                    fill="#F3FFFB"
                  />
                  <path
                    d="M3.61719 15.7559H5.14902V17.631H3.61719V15.7559Z"
                    fill="#F3FFFB"
                  />
                  <path
                    d="M7.43005 15.7559H8.96188V17.631H7.43005V15.7559Z"
                    fill="#F3FFFB"
                  />
                  <path
                    d="M14.7491 8.25513H16.281V10.1303H14.7491V8.25513Z"
                    fill="#23A4DE"
                  />
                  <path
                    d="M14.7491 12.0056H16.281V13.8807H14.7491V12.0056Z"
                    fill="#23A4DE"
                  />
                </svg>
              </span>
              <div
                class="e1t8i3z1-el-table-cell-content"
                data-narrow-label="Customer Name"
              >
                Reapit Sales
              </div>
            </div>
            <div
              class="e4zpaja-el-table-cell"
            >
              <div
                class="e1t8i3z1-el-table-cell-content"
                data-narrow-label="Reapit Customer Code"
              >
                RES
              </div>
            </div>
            <div
              class="e4zpaja-el-table-cell"
            >
              <div
                class="e1t8i3z1-el-table-cell-content"
                data-narrow-label="Customer Address"
              >
                1 Big House Something Something UK BB1 1BB
              </div>
            </div>
            <div
              class="e4zpaja-el-table-cell"
            >
              <div
                class="e1t8i3z1-el-table-cell-content"
                data-narrow-label="Date Installed"
              >
                23-03-2022
              </div>
            </div>
            <div
              class="e4zpaja-el-table-cell"
            >
              <div
                class="e1t8i3z1-el-table-cell-content"
                data-narrow-label="Installed By"
              >
                <a
                  href="mailto:example@mail.com?subject=Your%20recent%20installation%20of%20will-test-dev-co-voracious-person%20in%20the%20Reapit%20AppMarket"
                  rel="noreferrer"
                  target="_blank"
                >
                  example@mail.com
                </a>
              </div>
            </div>
            <div
              class="e1fmntjl-el-table-cta-cell"
            >
              <div
                class="ewmoxzc-el-table-cta-icon-container"
              >
                <span
                  class="ebee6r1-el-intent-primary ej9yrfo-el-icon"
                  style="font-size: 1.2rem;"
                >
                  <svg
                    fill="none"
                    height="1em"
                    viewBox="0 0 20 20"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M16.5625 2.5H13.125V1.875C13.125 0.841133 12.2839 0 11.25 0H8.75C7.71613 0 6.875 0.841133 6.875 1.875V2.5H3.4375C2.57594 2.5 1.875 3.20094 1.875 4.0625V6.25C1.875 6.59516 2.15484 6.875 2.5 6.875H2.84156L3.38152 18.2142C3.42922 19.2156 4.25187 20 5.25437 20H14.7456C15.7482 20 16.5708 19.2156 16.6185 18.2142L17.1584 6.875H17.5C17.8452 6.875 18.125 6.59516 18.125 6.25V4.0625C18.125 3.20094 17.4241 2.5 16.5625 2.5ZM8.125 1.875C8.125 1.53039 8.40539 1.25 8.75 1.25H11.25C11.5946 1.25 11.875 1.53039 11.875 1.875V2.5H8.125V1.875ZM3.125 4.0625C3.125 3.8902 3.2652 3.75 3.4375 3.75H16.5625C16.7348 3.75 16.875 3.8902 16.875 4.0625V5.625C16.6824 5.625 3.92316 5.625 3.125 5.625V4.0625ZM15.3699 18.1547C15.354 18.4885 15.0798 18.75 14.7456 18.75H5.25437C4.9202 18.75 4.64598 18.4885 4.63012 18.1547L4.09297 6.875H15.907L15.3699 18.1547Z"
                      fill="currentColor"
                    />
                    <path
                      d="M10 17.5C10.3452 17.5 10.625 17.2202 10.625 16.875V8.75C10.625 8.40484 10.3452 8.125 10 8.125C9.65484 8.125 9.375 8.40484 9.375 8.75V16.875C9.375 17.2202 9.6548 17.5 10 17.5Z"
                      fill="currentColor"
                    />
                    <path
                      d="M13.125 17.5C13.4702 17.5 13.75 17.2202 13.75 16.875V8.75C13.75 8.40484 13.4702 8.125 13.125 8.125C12.7798 8.125 12.5 8.40484 12.5 8.75V16.875C12.5 17.2202 12.7798 17.5 13.125 17.5Z"
                      fill="currentColor"
                    />
                    <path
                      d="M6.875 17.5C7.22016 17.5 7.5 17.2202 7.5 16.875V8.75C7.5 8.40484 7.22016 8.125 6.875 8.125C6.52984 8.125 6.25 8.40484 6.25 8.75V16.875C6.25 17.2202 6.5298 17.5 6.875 17.5Z"
                      fill="currentColor"
                    />
                  </svg>
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          class="e1gfmg2g-el-table-row-container"
        >
          <div
            class="es3tf1j-el-table-row"
          >
            <div
              class="eqy88gj-el-table-cell-has-dark-text e4zpaja-el-table-cell"
            >
              <span
                class="epibvz0-el-intent-secondary ej9yrfo-el-icon"
              >
                <svg
                  fill="none"
                  height="1em"
                  viewBox="0 0 20 20"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M20 20H11V4H20V16.264V20Z"
                    fill="#7BC9EB"
                  />
                  <path
                    d="M13 2H11.3572L10 9.05535L11.3574 20H13V2Z"
                    fill="#0061A8"
                  />
                  <path
                    d="M1.27977 0V1.78715H0V20H12V0H1.27977Z"
                    fill="#23A4DE"
                  />
                  <path
                    d="M3.61719 4.50488H5.14902V6.38001H3.61719V4.50488Z"
                    fill="#F3FFFB"
                  />
                  <path
                    d="M7.43005 4.50488H8.96188V6.38001H7.43005V4.50488Z"
                    fill="#F3FFFB"
                  />
                  <path
                    d="M3.61719 8.25513H5.14902V10.1303H3.61719V8.25513Z"
                    fill="#F3FFFB"
                  />
                  <path
                    d="M7.43005 8.25513H8.96188V10.1303H7.43005V8.25513Z"
                    fill="#F3FFFB"
                  />
                  <path
                    d="M3.61719 12.0056H5.14902V13.8807H3.61719V12.0056Z"
                    fill="#F3FFFB"
                  />
                  <path
                    d="M7.43005 12.0056H8.96188V13.8807H7.43005V12.0056Z"
                    fill="#F3FFFB"
                  />
                  <path
                    d="M3.61719 15.7559H5.14902V17.631H3.61719V15.7559Z"
                    fill="#F3FFFB"
                  />
                  <path
                    d="M7.43005 15.7559H8.96188V17.631H7.43005V15.7559Z"
                    fill="#F3FFFB"
                  />
                  <path
                    d="M14.7491 8.25513H16.281V10.1303H14.7491V8.25513Z"
                    fill="#23A4DE"
                  />
                  <path
                    d="M14.7491 12.0056H16.281V13.8807H14.7491V12.0056Z"
                    fill="#23A4DE"
                  />
                </svg>
              </span>
              <div
                class="e1t8i3z1-el-table-cell-content"
                data-narrow-label="Customer Name"
              >
                Foo Bar
              </div>
            </div>
            <div
              class="e4zpaja-el-table-cell"
            >
              <div
                class="e1t8i3z1-el-table-cell-content"
                data-narrow-label="Reapit Customer Code"
              >
                MXX
              </div>
            </div>
            <div
              class="e4zpaja-el-table-cell"
            >
              <div
                class="e1t8i3z1-el-table-cell-content"
                data-narrow-label="Customer Address"
              >
                1 Big House Something Something UK BB1 1BB
              </div>
            </div>
            <div
              class="e4zpaja-el-table-cell"
            >
              <div
                class="e1t8i3z1-el-table-cell-content"
                data-narrow-label="Date Installed"
              >
                11-01-2022
              </div>
            </div>
            <div
              class="e4zpaja-el-table-cell"
            >
              <div
                class="e1t8i3z1-el-table-cell-content"
                data-narrow-label="Installed By"
              >
                <a
                  href="mailto:example@mail.com?subject=Your%20recent%20installation%20of%20will-test-dev-co-voracious-person%20in%20the%20Reapit%20AppMarket"
                  rel="noreferrer"
                  target="_blank"
                >
                  example@mail.com
                </a>
              </div>
            </div>
            <div
              class="e1fmntjl-el-table-cta-cell"
            >
              <div
                class="ewmoxzc-el-table-cta-icon-container"
              >
                <span
                  class="ebee6r1-el-intent-primary ej9yrfo-el-icon"
                  style="font-size: 1.2rem;"
                >
                  <svg
                    fill="none"
                    height="1em"
                    viewBox="0 0 20 20"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M16.5625 2.5H13.125V1.875C13.125 0.841133 12.2839 0 11.25 0H8.75C7.71613 0 6.875 0.841133 6.875 1.875V2.5H3.4375C2.57594 2.5 1.875 3.20094 1.875 4.0625V6.25C1.875 6.59516 2.15484 6.875 2.5 6.875H2.84156L3.38152 18.2142C3.42922 19.2156 4.25187 20 5.25437 20H14.7456C15.7482 20 16.5708 19.2156 16.6185 18.2142L17.1584 6.875H17.5C17.8452 6.875 18.125 6.59516 18.125 6.25V4.0625C18.125 3.20094 17.4241 2.5 16.5625 2.5ZM8.125 1.875C8.125 1.53039 8.40539 1.25 8.75 1.25H11.25C11.5946 1.25 11.875 1.53039 11.875 1.875V2.5H8.125V1.875ZM3.125 4.0625C3.125 3.8902 3.2652 3.75 3.4375 3.75H16.5625C16.7348 3.75 16.875 3.8902 16.875 4.0625V5.625C16.6824 5.625 3.92316 5.625 3.125 5.625V4.0625ZM15.3699 18.1547C15.354 18.4885 15.0798 18.75 14.7456 18.75H5.25437C4.9202 18.75 4.64598 18.4885 4.63012 18.1547L4.09297 6.875H15.907L15.3699 18.1547Z"
                      fill="currentColor"
                    />
                    <path
                      d="M10 17.5C10.3452 17.5 10.625 17.2202 10.625 16.875V8.75C10.625 8.40484 10.3452 8.125 10 8.125C9.65484 8.125 9.375 8.40484 9.375 8.75V16.875C9.375 17.2202 9.6548 17.5 10 17.5Z"
                      fill="currentColor"
                    />
                    <path
                      d="M13.125 17.5C13.4702 17.5 13.75 17.2202 13.75 16.875V8.75C13.75 8.40484 13.4702 8.125 13.125 8.125C12.7798 8.125 12.5 8.40484 12.5 8.75V16.875C12.5 17.2202 12.7798 17.5 13.125 17.5Z"
                      fill="currentColor"
                    />
                    <path
                      d="M6.875 17.5C7.22016 17.5 7.5 17.2202 7.5 16.875V8.75C7.5 8.40484 7.22016 8.125 6.875 8.125C6.52984 8.125 6.25 8.40484 6.25 8.75V16.875C6.25 17.2202 6.5298 17.5 6.875 17.5Z"
                      fill="currentColor"
                    />
                  </svg>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="e1nnyshg-el-pagination-wrap"
      >
        <div
          class="ex6bmfc-el-pagination-text"
        >
          <strong>
            1
          </strong>
           of 
          1
        </div>
        <button
          class="e1yynswi-el-pagination-button"
          data-testid="back-button"
          type="button"
        >
          <span
            class="ej9yrfo-el-icon"
          >
            <svg
              fill="none"
              height="1em"
              viewBox="0 0 12 12"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M2 5.5L8 9.39711L8 1.60289L2 5.5Z"
                fill="currentColor"
              />
            </svg>
          </span>
        </button>
        <button
          class="e1yynswi-el-pagination-button"
          data-testid="forward-button"
          type="button"
        >
          <span
            class="ej9yrfo-el-icon"
          >
            <svg
              fill="none"
              height="1em"
              viewBox="0 0 12 12"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M9 5.5L3 9.39711L3 1.60289L9 5.5Z"
                fill="currentColor"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="ecbqyq6-el-snack-holder"
    />
    <div
      class="e1q0zwo9-el-flex-justify-between e2kmzjs-el-flex-container"
    >
      <h1
        class="evblxhy-el-title"
      >
        Installations
      </h1>
    </div>
    <p
      class="e11jaxfn-el-has-grey-text etrchfm-el-has-section-margin e15ggth7-el-body-text"
    >
      The table below gives you the information you need to understand Reapit Client organisations that have installed your application for use. In addition, you can force terminate a customer installation by using the call to action on each row. For more information on the installations table
      <a>
         see here
      </a>
      .
    </p>
    <div
      class="ec47sgk-el-mb11 elkdvoz-el-table"
      data-has-call-to-action="true"
      data-has-expandable-action="false"
      data-num-columns-excl-action-col="5"
    >
      <div
        class="e1co3p83-el-table-headers-row"
      >
        <div
          class="e1qy4g2u-el-table-header"
        >
          Customer Name
        </div>
        <div
          class="e1qy4g2u-el-table-header"
        >
          Reapit Customer Code
        </div>
        <div
          class="e1qy4g2u-el-table-header"
        >
          Customer Address
        </div>
        <div
          class="e1qy4g2u-el-table-header"
        >
          Date Installed
        </div>
        <div
          class="e1qy4g2u-el-table-header"
        >
          Installed By
        </div>
        <div
          class="e1qy4g2u-el-table-header"
        >
          Uninstall
        </div>
      </div>
      <div
        class="e1gfmg2g-el-table-row-container"
      >
        <div
          class="es3tf1j-el-table-row"
        >
          <div
            class="eqy88gj-el-table-cell-has-dark-text e4zpaja-el-table-cell"
          >
            <span
              class="epibvz0-el-intent-secondary ej9yrfo-el-icon"
            >
              <svg
                fill="none"
                height="1em"
                viewBox="0 0 20 20"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M20 20H11V4H20V16.264V20Z"
                  fill="#7BC9EB"
                />
                <path
                  d="M13 2H11.3572L10 9.05535L11.3574 20H13V2Z"
                  fill="#0061A8"
                />
                <path
                  d="M1.27977 0V1.78715H0V20H12V0H1.27977Z"
                  fill="#23A4DE"
                />
                <path
                  d="M3.61719 4.50488H5.14902V6.38001H3.61719V4.50488Z"
                  fill="#F3FFFB"
                />
                <path
                  d="M7.43005 4.50488H8.96188V6.38001H7.43005V4.50488Z"
                  fill="#F3FFFB"
                />
                <path
                  d="M3.61719 8.25513H5.14902V10.1303H3.61719V8.25513Z"
                  fill="#F3FFFB"
                />
                <path
                  d="M7.43005 8.25513H8.96188V10.1303H7.43005V8.25513Z"
                  fill="#F3FFFB"
                />
                <path
                  d="M3.61719 12.0056H5.14902V13.8807H3.61719V12.0056Z"
                  fill="#F3FFFB"
                />
                <path
                  d="M7.43005 12.0056H8.96188V13.8807H7.43005V12.0056Z"
                  fill="#F3FFFB"
                />
                <path
                  d="M3.61719 15.7559H5.14902V17.631H3.61719V15.7559Z"
                  fill="#F3FFFB"
                />
                <path
                  d="M7.43005 15.7559H8.96188V17.631H7.43005V15.7559Z"
                  fill="#F3FFFB"
                />
                <path
                  d="M14.7491 8.25513H16.281V10.1303H14.7491V8.25513Z"
                  fill="#23A4DE"
                />
                <path
                  d="M14.7491 12.0056H16.281V13.8807H14.7491V12.0056Z"
                  fill="#23A4DE"
                />
              </svg>
            </span>
            <div
              class="e1t8i3z1-el-table-cell-content"
              data-narrow-label="Customer Name"
            >
              Reapit Sales
            </div>
          </div>
          <div
            class="e4zpaja-el-table-cell"
          >
            <div
              class="e1t8i3z1-el-table-cell-content"
              data-narrow-label="Reapit Customer Code"
            >
              RES
            </div>
          </div>
          <div
            class="e4zpaja-el-table-cell"
          >
            <div
              class="e1t8i3z1-el-table-cell-content"
              data-narrow-label="Customer Address"
            >
              1 Big House Something Something UK BB1 1BB
            </div>
          </div>
          <div
            class="e4zpaja-el-table-cell"
          >
            <div
              class="e1t8i3z1-el-table-cell-content"
              data-narrow-label="Date Installed"
            >
              23-03-2022
            </div>
          </div>
          <div
            class="e4zpaja-el-table-cell"
          >
            <div
              class="e1t8i3z1-el-table-cell-content"
              data-narrow-label="Installed By"
            >
              <a
                href="mailto:example@mail.com?subject=Your%20recent%20installation%20of%20will-test-dev-co-voracious-person%20in%20the%20Reapit%20AppMarket"
                rel="noreferrer"
                target="_blank"
              >
                example@mail.com
              </a>
            </div>
          </div>
          <div
            class="e1fmntjl-el-table-cta-cell"
          >
            <div
              class="ewmoxzc-el-table-cta-icon-container"
            >
              <span
                class="ebee6r1-el-intent-primary ej9yrfo-el-icon"
                style="font-size: 1.2rem;"
              >
                <svg
                  fill="none"
                  height="1em"
                  viewBox="0 0 20 20"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M16.5625 2.5H13.125V1.875C13.125 0.841133 12.2839 0 11.25 0H8.75C7.71613 0 6.875 0.841133 6.875 1.875V2.5H3.4375C2.57594 2.5 1.875 3.20094 1.875 4.0625V6.25C1.875 6.59516 2.15484 6.875 2.5 6.875H2.84156L3.38152 18.2142C3.42922 19.2156 4.25187 20 5.25437 20H14.7456C15.7482 20 16.5708 19.2156 16.6185 18.2142L17.1584 6.875H17.5C17.8452 6.875 18.125 6.59516 18.125 6.25V4.0625C18.125 3.20094 17.4241 2.5 16.5625 2.5ZM8.125 1.875C8.125 1.53039 8.40539 1.25 8.75 1.25H11.25C11.5946 1.25 11.875 1.53039 11.875 1.875V2.5H8.125V1.875ZM3.125 4.0625C3.125 3.8902 3.2652 3.75 3.4375 3.75H16.5625C16.7348 3.75 16.875 3.8902 16.875 4.0625V5.625C16.6824 5.625 3.92316 5.625 3.125 5.625V4.0625ZM15.3699 18.1547C15.354 18.4885 15.0798 18.75 14.7456 18.75H5.25437C4.9202 18.75 4.64598 18.4885 4.63012 18.1547L4.09297 6.875H15.907L15.3699 18.1547Z"
                    fill="currentColor"
                  />
                  <path
                    d="M10 17.5C10.3452 17.5 10.625 17.2202 10.625 16.875V8.75C10.625 8.40484 10.3452 8.125 10 8.125C9.65484 8.125 9.375 8.40484 9.375 8.75V16.875C9.375 17.2202 9.6548 17.5 10 17.5Z"
                    fill="currentColor"
                  />
                  <path
                    d="M13.125 17.5C13.4702 17.5 13.75 17.2202 13.75 16.875V8.75C13.75 8.40484 13.4702 8.125 13.125 8.125C12.7798 8.125 12.5 8.40484 12.5 8.75V16.875C12.5 17.2202 12.7798 17.5 13.125 17.5Z"
                    fill="currentColor"
                  />
                  <path
                    d="M6.875 17.5C7.22016 17.5 7.5 17.2202 7.5 16.875V8.75C7.5 8.40484 7.22016 8.125 6.875 8.125C6.52984 8.125 6.25 8.40484 6.25 8.75V16.875C6.25 17.2202 6.5298 17.5 6.875 17.5Z"
                    fill="currentColor"
                  />
                </svg>
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="e1gfmg2g-el-table-row-container"
      >
        <div
          class="es3tf1j-el-table-row"
        >
          <div
            class="eqy88gj-el-table-cell-has-dark-text e4zpaja-el-table-cell"
          >
            <span
              class="epibvz0-el-intent-secondary ej9yrfo-el-icon"
            >
              <svg
                fill="none"
                height="1em"
                viewBox="0 0 20 20"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M20 20H11V4H20V16.264V20Z"
                  fill="#7BC9EB"
                />
                <path
                  d="M13 2H11.3572L10 9.05535L11.3574 20H13V2Z"
                  fill="#0061A8"
                />
                <path
                  d="M1.27977 0V1.78715H0V20H12V0H1.27977Z"
                  fill="#23A4DE"
                />
                <path
                  d="M3.61719 4.50488H5.14902V6.38001H3.61719V4.50488Z"
                  fill="#F3FFFB"
                />
                <path
                  d="M7.43005 4.50488H8.96188V6.38001H7.43005V4.50488Z"
                  fill="#F3FFFB"
                />
                <path
                  d="M3.61719 8.25513H5.14902V10.1303H3.61719V8.25513Z"
                  fill="#F3FFFB"
                />
                <path
                  d="M7.43005 8.25513H8.96188V10.1303H7.43005V8.25513Z"
                  fill="#F3FFFB"
                />
                <path
                  d="M3.61719 12.0056H5.14902V13.8807H3.61719V12.0056Z"
                  fill="#F3FFFB"
                />
                <path
                  d="M7.43005 12.0056H8.96188V13.8807H7.43005V12.0056Z"
                  fill="#F3FFFB"
                />
                <path
                  d="M3.61719 15.7559H5.14902V17.631H3.61719V15.7559Z"
                  fill="#F3FFFB"
                />
                <path
                  d="M7.43005 15.7559H8.96188V17.631H7.43005V15.7559Z"
                  fill="#F3FFFB"
                />
                <path
                  d="M14.7491 8.25513H16.281V10.1303H14.7491V8.25513Z"
                  fill="#23A4DE"
                />
                <path
                  d="M14.7491 12.0056H16.281V13.8807H14.7491V12.0056Z"
                  fill="#23A4DE"
                />
              </svg>
            </span>
            <div
              class="e1t8i3z1-el-table-cell-content"
              data-narrow-label="Customer Name"
            >
              Foo Bar
            </div>
          </div>
          <div
            class="e4zpaja-el-table-cell"
          >
            <div
              class="e1t8i3z1-el-table-cell-content"
              data-narrow-label="Reapit Customer Code"
            >
              MXX
            </div>
          </div>
          <div
            class="e4zpaja-el-table-cell"
          >
            <div
              class="e1t8i3z1-el-table-cell-content"
              data-narrow-label="Customer Address"
            >
              1 Big House Something Something UK BB1 1BB
            </div>
          </div>
          <div
            class="e4zpaja-el-table-cell"
          >
            <div
              class="e1t8i3z1-el-table-cell-content"
              data-narrow-label="Date Installed"
            >
              11-01-2022
            </div>
          </div>
          <div
            class="e4zpaja-el-table-cell"
          >
            <div
              class="e1t8i3z1-el-table-cell-content"
              data-narrow-label="Installed By"
            >
              <a
                href="mailto:example@mail.com?subject=Your%20recent%20installation%20of%20will-test-dev-co-voracious-person%20in%20the%20Reapit%20AppMarket"
                rel="noreferrer"
                target="_blank"
              >
                example@mail.com
              </a>
            </div>
          </div>
          <div
            class="e1fmntjl-el-table-cta-cell"
          >
            <div
              class="ewmoxzc-el-table-cta-icon-container"
            >
              <span
                class="ebee6r1-el-intent-primary ej9yrfo-el-icon"
                style="font-size: 1.2rem;"
              >
                <svg
                  fill="none"
                  height="1em"
                  viewBox="0 0 20 20"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M16.5625 2.5H13.125V1.875C13.125 0.841133 12.2839 0 11.25 0H8.75C7.71613 0 6.875 0.841133 6.875 1.875V2.5H3.4375C2.57594 2.5 1.875 3.20094 1.875 4.0625V6.25C1.875 6.59516 2.15484 6.875 2.5 6.875H2.84156L3.38152 18.2142C3.42922 19.2156 4.25187 20 5.25437 20H14.7456C15.7482 20 16.5708 19.2156 16.6185 18.2142L17.1584 6.875H17.5C17.8452 6.875 18.125 6.59516 18.125 6.25V4.0625C18.125 3.20094 17.4241 2.5 16.5625 2.5ZM8.125 1.875C8.125 1.53039 8.40539 1.25 8.75 1.25H11.25C11.5946 1.25 11.875 1.53039 11.875 1.875V2.5H8.125V1.875ZM3.125 4.0625C3.125 3.8902 3.2652 3.75 3.4375 3.75H16.5625C16.7348 3.75 16.875 3.8902 16.875 4.0625V5.625C16.6824 5.625 3.92316 5.625 3.125 5.625V4.0625ZM15.3699 18.1547C15.354 18.4885 15.0798 18.75 14.7456 18.75H5.25437C4.9202 18.75 4.64598 18.4885 4.63012 18.1547L4.09297 6.875H15.907L15.3699 18.1547Z"
                    fill="currentColor"
                  />
                  <path
                    d="M10 17.5C10.3452 17.5 10.625 17.2202 10.625 16.875V8.75C10.625 8.40484 10.3452 8.125 10 8.125C9.65484 8.125 9.375 8.40484 9.375 8.75V16.875C9.375 17.2202 9.6548 17.5 10 17.5Z"
                    fill="currentColor"
                  />
                  <path
                    d="M13.125 17.5C13.4702 17.5 13.75 17.2202 13.75 16.875V8.75C13.75 8.40484 13.4702 8.125 13.125 8.125C12.7798 8.125 12.5 8.40484 12.5 8.75V16.875C12.5 17.2202 12.7798 17.5 13.125 17.5Z"
                    fill="currentColor"
                  />
                  <path
                    d="M6.875 17.5C7.22016 17.5 7.5 17.2202 7.5 16.875V8.75C7.5 8.40484 7.22016 8.125 6.875 8.125C6.52984 8.125 6.25 8.40484 6.25 8.75V16.875C6.25 17.2202 6.5298 17.5 6.875 17.5Z"
                    fill="currentColor"
                  />
                </svg>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="e1nnyshg-el-pagination-wrap"
    >
      <div
        class="ex6bmfc-el-pagination-text"
      >
        <strong>
          1
        </strong>
         of 
        1
      </div>
      <button
        class="e1yynswi-el-pagination-button"
        data-testid="back-button"
        type="button"
      >
        <span
          class="ej9yrfo-el-icon"
        >
          <svg
            fill="none"
            height="1em"
            viewBox="0 0 12 12"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M2 5.5L8 9.39711L8 1.60289L2 5.5Z"
              fill="currentColor"
            />
          </svg>
        </span>
      </button>
      <button
        class="e1yynswi-el-pagination-button"
        data-testid="forward-button"
        type="button"
      >
        <span
          class="ej9yrfo-el-icon"
        >
          <svg
            fill="none"
            height="1em"
            viewBox="0 0 12 12"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M9 5.5L3 9.39711L3 1.60289L9 5.5Z"
              fill="currentColor"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`AppInstallations should match a snapshot when loading 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="ecbqyq6-el-snack-holder"
      />
      <div
        class="e1q0zwo9-el-flex-justify-between e2kmzjs-el-flex-container"
      >
        <h1
          class="evblxhy-el-title"
        >
          Installations
        </h1>
      </div>
      <div
        class="ebhrnzh-el-loader-container"
      >
        <div
          class="eq1m1jz-el-loader"
        >
          <div
            class="exikdu1-el-loader-moving-bar"
          />
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="ecbqyq6-el-snack-holder"
    />
    <div
      class="e1q0zwo9-el-flex-justify-between e2kmzjs-el-flex-container"
    >
      <h1
        class="evblxhy-el-title"
      >
        Installations
      </h1>
    </div>
    <div
      class="ebhrnzh-el-loader-container"
    >
      <div
        class="eq1m1jz-el-loader"
      >
        <div
          class="exikdu1-el-loader-moving-bar"
        />
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`AppInstallations should match a snapshot when no installations 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="ecbqyq6-el-snack-holder"
      />
      <div
        class="e1q0zwo9-el-flex-justify-between e2kmzjs-el-flex-container"
      >
        <h1
          class="evblxhy-el-title"
        >
          Installations
        </h1>
      </div>
      <div
        class="epibvz0-el-intent-secondary evmehgn-el-is-active e1qwk99x-el-pn-is-full-width e15e3rd4-el-pn-is-inline e1rlwnim-el-persistant-notification"
      >
        <div
          class="eta6kcl-el-pn-icon"
          data-testid="close-icon"
        >
          <span
            class="ej9yrfo-el-icon"
          >
            <svg
              fill="none"
              height="1em"
              viewBox="0 0 20 20"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M9.99958 0C4.47746 0 0 4.47746 0 9.99958C0 15.5217 4.47746 20 9.99958 20C15.5217 20 20 15.5217 20 9.99958C20 4.47746 15.5217 0 9.99958 0ZM12.0813 15.498C11.5666 15.7012 11.1568 15.8552 10.8495 15.9619C10.5431 16.0686 10.1867 16.1219 9.78116 16.1219C9.1581 16.1219 8.67302 15.9695 8.32762 15.6656C7.98222 15.3617 7.81037 14.9765 7.81037 14.5084C7.81037 14.3263 7.82307 14.1401 7.84847 13.9505C7.87471 13.7608 7.91619 13.5475 7.97291 13.3079L8.61714 11.0324C8.67386 10.814 8.72296 10.6066 8.7619 10.4135C8.80085 10.2188 8.81947 10.0402 8.81947 9.87767C8.81947 9.58815 8.75937 9.38497 8.64 9.27069C8.51894 9.1564 8.29122 9.10053 7.95175 9.10053C7.78582 9.10053 7.61481 9.12508 7.43958 9.17672C7.26603 9.23005 7.11534 9.27831 6.99175 9.32571L7.1619 8.62476C7.58349 8.45291 7.9873 8.30561 8.37249 8.1837C8.75767 8.06011 9.12169 7.99915 9.46455 7.99915C10.0834 7.99915 10.5608 8.14984 10.8969 8.44783C11.2313 8.74667 11.3998 9.13524 11.3998 9.6127C11.3998 9.71175 11.3879 9.88614 11.3651 10.135C11.3422 10.3848 11.299 10.6125 11.2364 10.8216L10.5956 13.0904C10.5431 13.2724 10.4965 13.4806 10.4542 13.7134C10.4127 13.9462 10.3924 14.124 10.3924 14.2434C10.3924 14.5448 10.4593 14.7505 10.5947 14.8597C10.7285 14.9689 10.963 15.0239 11.2948 15.0239C11.4514 15.0239 11.6267 14.996 11.8248 14.9418C12.0212 14.8876 12.1634 14.8394 12.2531 14.7979L12.0813 15.498ZM11.9678 6.2891C11.669 6.56677 11.3092 6.70561 10.8885 6.70561C10.4686 6.70561 10.1062 6.56677 9.80487 6.2891C9.50519 6.01143 9.35365 5.67365 9.35365 5.27915C9.35365 4.8855 9.50603 4.54688 9.80487 4.26667C10.1062 3.98561 10.4686 3.84593 10.8885 3.84593C11.3092 3.84593 11.6698 3.98561 11.9678 4.26667C12.2667 4.54688 12.4165 4.8855 12.4165 5.27915C12.4165 5.6745 12.2667 6.01143 11.9678 6.2891Z"
                fill="currentColor"
              />
            </svg>
          </span>
        </div>
        <div
          class="e1geon40-el-pn-content"
        >
          No installations for the application.
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="ecbqyq6-el-snack-holder"
    />
    <div
      class="e1q0zwo9-el-flex-justify-between e2kmzjs-el-flex-container"
    >
      <h1
        class="evblxhy-el-title"
      >
        Installations
      </h1>
    </div>
    <div
      class="epibvz0-el-intent-secondary evmehgn-el-is-active e1qwk99x-el-pn-is-full-width e15e3rd4-el-pn-is-inline e1rlwnim-el-persistant-notification"
    >
      <div
        class="eta6kcl-el-pn-icon"
        data-testid="close-icon"
      >
        <span
          class="ej9yrfo-el-icon"
        >
          <svg
            fill="none"
            height="1em"
            viewBox="0 0 20 20"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M9.99958 0C4.47746 0 0 4.47746 0 9.99958C0 15.5217 4.47746 20 9.99958 20C15.5217 20 20 15.5217 20 9.99958C20 4.47746 15.5217 0 9.99958 0ZM12.0813 15.498C11.5666 15.7012 11.1568 15.8552 10.8495 15.9619C10.5431 16.0686 10.1867 16.1219 9.78116 16.1219C9.1581 16.1219 8.67302 15.9695 8.32762 15.6656C7.98222 15.3617 7.81037 14.9765 7.81037 14.5084C7.81037 14.3263 7.82307 14.1401 7.84847 13.9505C7.87471 13.7608 7.91619 13.5475 7.97291 13.3079L8.61714 11.0324C8.67386 10.814 8.72296 10.6066 8.7619 10.4135C8.80085 10.2188 8.81947 10.0402 8.81947 9.87767C8.81947 9.58815 8.75937 9.38497 8.64 9.27069C8.51894 9.1564 8.29122 9.10053 7.95175 9.10053C7.78582 9.10053 7.61481 9.12508 7.43958 9.17672C7.26603 9.23005 7.11534 9.27831 6.99175 9.32571L7.1619 8.62476C7.58349 8.45291 7.9873 8.30561 8.37249 8.1837C8.75767 8.06011 9.12169 7.99915 9.46455 7.99915C10.0834 7.99915 10.5608 8.14984 10.8969 8.44783C11.2313 8.74667 11.3998 9.13524 11.3998 9.6127C11.3998 9.71175 11.3879 9.88614 11.3651 10.135C11.3422 10.3848 11.299 10.6125 11.2364 10.8216L10.5956 13.0904C10.5431 13.2724 10.4965 13.4806 10.4542 13.7134C10.4127 13.9462 10.3924 14.124 10.3924 14.2434C10.3924 14.5448 10.4593 14.7505 10.5947 14.8597C10.7285 14.9689 10.963 15.0239 11.2948 15.0239C11.4514 15.0239 11.6267 14.996 11.8248 14.9418C12.0212 14.8876 12.1634 14.8394 12.2531 14.7979L12.0813 15.498ZM11.9678 6.2891C11.669 6.56677 11.3092 6.70561 10.8885 6.70561C10.4686 6.70561 10.1062 6.56677 9.80487 6.2891C9.50519 6.01143 9.35365 5.67365 9.35365 5.27915C9.35365 4.8855 9.50603 4.54688 9.80487 4.26667C10.1062 3.98561 10.4686 3.84593 10.8885 3.84593C11.3092 3.84593 11.6698 3.98561 11.9678 4.26667C12.2667 4.54688 12.4165 4.8855 12.4165 5.27915C12.4165 5.6745 12.2667 6.01143 11.9678 6.2891Z"
              fill="currentColor"
            />
          </svg>
        </span>
      </div>
      <div
        class="e1geon40-el-pn-content"
      >
        No installations for the application.
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`AppInstallations should match a snapshot when no response 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="ecbqyq6-el-snack-holder"
      />
      <div
        class="e1q0zwo9-el-flex-justify-between e2kmzjs-el-flex-container"
      >
        <h1
          class="evblxhy-el-title"
        >
          Installations
        </h1>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="ecbqyq6-el-snack-holder"
    />
    <div
      class="e1q0zwo9-el-flex-justify-between e2kmzjs-el-flex-container"
    >
      <h1
        class="evblxhy-el-title"
      >
        Installations
      </h1>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`AppInstallations should match snapshot for mobile view 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div
      id="root"
    >
      <div />
      <div />
    </div>
    <div>
      <div
        class="ecbqyq6-el-snack-holder"
      />
      <div
        class="e1q0zwo9-el-flex-justify-between e2kmzjs-el-flex-container"
      >
        <h1
          class="evblxhy-el-title"
        >
          Installations
        </h1>
        <div
          class="eay05y4-el-button-group"
        >
          <div
            class="e1i2en9o-el-button-group-align-right ebqwrow-el-button-group-inner"
          >
            <button
              class="e1ymtwpu-el-intent-low eqfkc7t-el-button"
            >
              Controls
            </button>
          </div>
        </div>
      </div>
      <p
        class="e11jaxfn-el-has-grey-text etrchfm-el-has-section-margin e15ggth7-el-body-text"
      >
        The table below gives you the information you need to understand Reapit Client organisations that have installed your application for use. In addition, you can force terminate a customer installation by using the call to action on each row. For more information on the installations table
        <a>
           see here
        </a>
        .
      </p>
      <div
        class="ec47sgk-el-mb11 elkdvoz-el-table"
        data-has-call-to-action="true"
        data-has-expandable-action="false"
        data-num-columns-excl-action-col="5"
      >
        <div
          class="e1co3p83-el-table-headers-row"
        >
          <div
            class="e1qy4g2u-el-table-header"
          >
            Customer Name
          </div>
          <div
            class="e1qy4g2u-el-table-header"
          >
            Reapit Customer Code
          </div>
          <div
            class="e1qy4g2u-el-table-header"
          >
            Customer Address
          </div>
          <div
            class="e1qy4g2u-el-table-header"
          >
            Date Installed
          </div>
          <div
            class="e1qy4g2u-el-table-header"
          >
            Installed By
          </div>
          <div
            class="e1qy4g2u-el-table-header"
          >
            Uninstall
          </div>
        </div>
        <div
          class="e1gfmg2g-el-table-row-container"
        >
          <div
            class="es3tf1j-el-table-row"
          >
            <div
              class="eqy88gj-el-table-cell-has-dark-text e4zpaja-el-table-cell"
            >
              <span
                class="epibvz0-el-intent-secondary ej9yrfo-el-icon"
              >
                <svg
                  fill="none"
                  height="1em"
                  viewBox="0 0 20 20"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M20 20H11V4H20V16.264V20Z"
                    fill="#7BC9EB"
                  />
                  <path
                    d="M13 2H11.3572L10 9.05535L11.3574 20H13V2Z"
                    fill="#0061A8"
                  />
                  <path
                    d="M1.27977 0V1.78715H0V20H12V0H1.27977Z"
                    fill="#23A4DE"
                  />
                  <path
                    d="M3.61719 4.50488H5.14902V6.38001H3.61719V4.50488Z"
                    fill="#F3FFFB"
                  />
                  <path
                    d="M7.43005 4.50488H8.96188V6.38001H7.43005V4.50488Z"
                    fill="#F3FFFB"
                  />
                  <path
                    d="M3.61719 8.25513H5.14902V10.1303H3.61719V8.25513Z"
                    fill="#F3FFFB"
                  />
                  <path
                    d="M7.43005 8.25513H8.96188V10.1303H7.43005V8.25513Z"
                    fill="#F3FFFB"
                  />
                  <path
                    d="M3.61719 12.0056H5.14902V13.8807H3.61719V12.0056Z"
                    fill="#F3FFFB"
                  />
                  <path
                    d="M7.43005 12.0056H8.96188V13.8807H7.43005V12.0056Z"
                    fill="#F3FFFB"
                  />
                  <path
                    d="M3.61719 15.7559H5.14902V17.631H3.61719V15.7559Z"
                    fill="#F3FFFB"
                  />
                  <path
                    d="M7.43005 15.7559H8.96188V17.631H7.43005V15.7559Z"
                    fill="#F3FFFB"
                  />
                  <path
                    d="M14.7491 8.25513H16.281V10.1303H14.7491V8.25513Z"
                    fill="#23A4DE"
                  />
                  <path
                    d="M14.7491 12.0056H16.281V13.8807H14.7491V12.0056Z"
                    fill="#23A4DE"
                  />
                </svg>
              </span>
              <div
                class="e1t8i3z1-el-table-cell-content"
                data-narrow-label="Customer Name"
              >
                Reapit Sales
              </div>
            </div>
            <div
              class="e4zpaja-el-table-cell"
            >
              <div
                class="e1t8i3z1-el-table-cell-content"
                data-narrow-label="Reapit Customer Code"
              >
                RES
              </div>
            </div>
            <div
              class="e4zpaja-el-table-cell"
            >
              <div
                class="e1t8i3z1-el-table-cell-content"
                data-narrow-label="Customer Address"
              >
                1 Big House Something Something UK BB1 1BB
              </div>
            </div>
            <div
              class="e4zpaja-el-table-cell"
            >
              <div
                class="e1t8i3z1-el-table-cell-content"
                data-narrow-label="Date Installed"
              >
                23-03-2022
              </div>
            </div>
            <div
              class="e4zpaja-el-table-cell"
            >
              <div
                class="e1t8i3z1-el-table-cell-content"
                data-narrow-label="Installed By"
              >
                <a
                  href="mailto:example@mail.com?subject=Your%20recent%20installation%20of%20will-test-dev-co-voracious-person%20in%20the%20Reapit%20AppMarket"
                  rel="noreferrer"
                  target="_blank"
                >
                  example@mail.com
                </a>
              </div>
            </div>
            <div
              class="e1fmntjl-el-table-cta-cell"
            >
              <div
                class="ewmoxzc-el-table-cta-icon-container"
              >
                <span
                  class="ebee6r1-el-intent-primary ej9yrfo-el-icon"
                  style="font-size: 1.2rem;"
                >
                  <svg
                    fill="none"
                    height="1em"
                    viewBox="0 0 20 20"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M16.5625 2.5H13.125V1.875C13.125 0.841133 12.2839 0 11.25 0H8.75C7.71613 0 6.875 0.841133 6.875 1.875V2.5H3.4375C2.57594 2.5 1.875 3.20094 1.875 4.0625V6.25C1.875 6.59516 2.15484 6.875 2.5 6.875H2.84156L3.38152 18.2142C3.42922 19.2156 4.25187 20 5.25437 20H14.7456C15.7482 20 16.5708 19.2156 16.6185 18.2142L17.1584 6.875H17.5C17.8452 6.875 18.125 6.59516 18.125 6.25V4.0625C18.125 3.20094 17.4241 2.5 16.5625 2.5ZM8.125 1.875C8.125 1.53039 8.40539 1.25 8.75 1.25H11.25C11.5946 1.25 11.875 1.53039 11.875 1.875V2.5H8.125V1.875ZM3.125 4.0625C3.125 3.8902 3.2652 3.75 3.4375 3.75H16.5625C16.7348 3.75 16.875 3.8902 16.875 4.0625V5.625C16.6824 5.625 3.92316 5.625 3.125 5.625V4.0625ZM15.3699 18.1547C15.354 18.4885 15.0798 18.75 14.7456 18.75H5.25437C4.9202 18.75 4.64598 18.4885 4.63012 18.1547L4.09297 6.875H15.907L15.3699 18.1547Z"
                      fill="currentColor"
                    />
                    <path
                      d="M10 17.5C10.3452 17.5 10.625 17.2202 10.625 16.875V8.75C10.625 8.40484 10.3452 8.125 10 8.125C9.65484 8.125 9.375 8.40484 9.375 8.75V16.875C9.375 17.2202 9.6548 17.5 10 17.5Z"
                      fill="currentColor"
                    />
                    <path
                      d="M13.125 17.5C13.4702 17.5 13.75 17.2202 13.75 16.875V8.75C13.75 8.40484 13.4702 8.125 13.125 8.125C12.7798 8.125 12.5 8.40484 12.5 8.75V16.875C12.5 17.2202 12.7798 17.5 13.125 17.5Z"
                      fill="currentColor"
                    />
                    <path
                      d="M6.875 17.5C7.22016 17.5 7.5 17.2202 7.5 16.875V8.75C7.5 8.40484 7.22016 8.125 6.875 8.125C6.52984 8.125 6.25 8.40484 6.25 8.75V16.875C6.25 17.2202 6.5298 17.5 6.875 17.5Z"
                      fill="currentColor"
                    />
                  </svg>
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          class="e1gfmg2g-el-table-row-container"
        >
          <div
            class="es3tf1j-el-table-row"
          >
            <div
              class="eqy88gj-el-table-cell-has-dark-text e4zpaja-el-table-cell"
            >
              <span
                class="epibvz0-el-intent-secondary ej9yrfo-el-icon"
              >
                <svg
                  fill="none"
                  height="1em"
                  viewBox="0 0 20 20"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M20 20H11V4H20V16.264V20Z"
                    fill="#7BC9EB"
                  />
                  <path
                    d="M13 2H11.3572L10 9.05535L11.3574 20H13V2Z"
                    fill="#0061A8"
                  />
                  <path
                    d="M1.27977 0V1.78715H0V20H12V0H1.27977Z"
                    fill="#23A4DE"
                  />
                  <path
                    d="M3.61719 4.50488H5.14902V6.38001H3.61719V4.50488Z"
                    fill="#F3FFFB"
                  />
                  <path
                    d="M7.43005 4.50488H8.96188V6.38001H7.43005V4.50488Z"
                    fill="#F3FFFB"
                  />
                  <path
                    d="M3.61719 8.25513H5.14902V10.1303H3.61719V8.25513Z"
                    fill="#F3FFFB"
                  />
                  <path
                    d="M7.43005 8.25513H8.96188V10.1303H7.43005V8.25513Z"
                    fill="#F3FFFB"
                  />
                  <path
                    d="M3.61719 12.0056H5.14902V13.8807H3.61719V12.0056Z"
                    fill="#F3FFFB"
                  />
                  <path
                    d="M7.43005 12.0056H8.96188V13.8807H7.43005V12.0056Z"
                    fill="#F3FFFB"
                  />
                  <path
                    d="M3.61719 15.7559H5.14902V17.631H3.61719V15.7559Z"
                    fill="#F3FFFB"
                  />
                  <path
                    d="M7.43005 15.7559H8.96188V17.631H7.43005V15.7559Z"
                    fill="#F3FFFB"
                  />
                  <path
                    d="M14.7491 8.25513H16.281V10.1303H14.7491V8.25513Z"
                    fill="#23A4DE"
                  />
                  <path
                    d="M14.7491 12.0056H16.281V13.8807H14.7491V12.0056Z"
                    fill="#23A4DE"
                  />
                </svg>
              </span>
              <div
                class="e1t8i3z1-el-table-cell-content"
                data-narrow-label="Customer Name"
              >
                Foo Bar
              </div>
            </div>
            <div
              class="e4zpaja-el-table-cell"
            >
              <div
                class="e1t8i3z1-el-table-cell-content"
                data-narrow-label="Reapit Customer Code"
              >
                MXX
              </div>
            </div>
            <div
              class="e4zpaja-el-table-cell"
            >
              <div
                class="e1t8i3z1-el-table-cell-content"
                data-narrow-label="Customer Address"
              >
                1 Big House Something Something UK BB1 1BB
              </div>
            </div>
            <div
              class="e4zpaja-el-table-cell"
            >
              <div
                class="e1t8i3z1-el-table-cell-content"
                data-narrow-label="Date Installed"
              >
                11-01-2022
              </div>
            </div>
            <div
              class="e4zpaja-el-table-cell"
            >
              <div
                class="e1t8i3z1-el-table-cell-content"
                data-narrow-label="Installed By"
              >
                <a
                  href="mailto:example@mail.com?subject=Your%20recent%20installation%20of%20will-test-dev-co-voracious-person%20in%20the%20Reapit%20AppMarket"
                  rel="noreferrer"
                  target="_blank"
                >
                  example@mail.com
                </a>
              </div>
            </div>
            <div
              class="e1fmntjl-el-table-cta-cell"
            >
              <div
                class="ewmoxzc-el-table-cta-icon-container"
              >
                <span
                  class="ebee6r1-el-intent-primary ej9yrfo-el-icon"
                  style="font-size: 1.2rem;"
                >
                  <svg
                    fill="none"
                    height="1em"
                    viewBox="0 0 20 20"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M16.5625 2.5H13.125V1.875C13.125 0.841133 12.2839 0 11.25 0H8.75C7.71613 0 6.875 0.841133 6.875 1.875V2.5H3.4375C2.57594 2.5 1.875 3.20094 1.875 4.0625V6.25C1.875 6.59516 2.15484 6.875 2.5 6.875H2.84156L3.38152 18.2142C3.42922 19.2156 4.25187 20 5.25437 20H14.7456C15.7482 20 16.5708 19.2156 16.6185 18.2142L17.1584 6.875H17.5C17.8452 6.875 18.125 6.59516 18.125 6.25V4.0625C18.125 3.20094 17.4241 2.5 16.5625 2.5ZM8.125 1.875C8.125 1.53039 8.40539 1.25 8.75 1.25H11.25C11.5946 1.25 11.875 1.53039 11.875 1.875V2.5H8.125V1.875ZM3.125 4.0625C3.125 3.8902 3.2652 3.75 3.4375 3.75H16.5625C16.7348 3.75 16.875 3.8902 16.875 4.0625V5.625C16.6824 5.625 3.92316 5.625 3.125 5.625V4.0625ZM15.3699 18.1547C15.354 18.4885 15.0798 18.75 14.7456 18.75H5.25437C4.9202 18.75 4.64598 18.4885 4.63012 18.1547L4.09297 6.875H15.907L15.3699 18.1547Z"
                      fill="currentColor"
                    />
                    <path
                      d="M10 17.5C10.3452 17.5 10.625 17.2202 10.625 16.875V8.75C10.625 8.40484 10.3452 8.125 10 8.125C9.65484 8.125 9.375 8.40484 9.375 8.75V16.875C9.375 17.2202 9.6548 17.5 10 17.5Z"
                      fill="currentColor"
                    />
                    <path
                      d="M13.125 17.5C13.4702 17.5 13.75 17.2202 13.75 16.875V8.75C13.75 8.40484 13.4702 8.125 13.125 8.125C12.7798 8.125 12.5 8.40484 12.5 8.75V16.875C12.5 17.2202 12.7798 17.5 13.125 17.5Z"
                      fill="currentColor"
                    />
                    <path
                      d="M6.875 17.5C7.22016 17.5 7.5 17.2202 7.5 16.875V8.75C7.5 8.40484 7.22016 8.125 6.875 8.125C6.52984 8.125 6.25 8.40484 6.25 8.75V16.875C6.25 17.2202 6.5298 17.5 6.875 17.5Z"
                      fill="currentColor"
                    />
                  </svg>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="e1nnyshg-el-pagination-wrap"
      >
        <div
          class="ex6bmfc-el-pagination-text"
        >
          <strong>
            1
          </strong>
           of 
          1
        </div>
        <button
          class="e1yynswi-el-pagination-button"
          data-testid="back-button"
          type="button"
        >
          <span
            class="ej9yrfo-el-icon"
          >
            <svg
              fill="none"
              height="1em"
              viewBox="0 0 12 12"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M2 5.5L8 9.39711L8 1.60289L2 5.5Z"
                fill="currentColor"
              />
            </svg>
          </span>
        </button>
        <button
          class="e1yynswi-el-pagination-button"
          data-testid="forward-button"
          type="button"
        >
          <span
            class="ej9yrfo-el-icon"
          >
            <svg
              fill="none"
              height="1em"
              viewBox="0 0 12 12"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M9 5.5L3 9.39711L3 1.60289L9 5.5Z"
                fill="currentColor"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="ecbqyq6-el-snack-holder"
    />
    <div
      class="e1q0zwo9-el-flex-justify-between e2kmzjs-el-flex-container"
    >
      <h1
        class="evblxhy-el-title"
      >
        Installations
      </h1>
      <div
        class="eay05y4-el-button-group"
      >
        <div
          class="e1i2en9o-el-button-group-align-right ebqwrow-el-button-group-inner"
        >
          <button
            class="e1ymtwpu-el-intent-low eqfkc7t-el-button"
          >
            Controls
          </button>
        </div>
      </div>
    </div>
    <p
      class="e11jaxfn-el-has-grey-text etrchfm-el-has-section-margin e15ggth7-el-body-text"
    >
      The table below gives you the information you need to understand Reapit Client organisations that have installed your application for use. In addition, you can force terminate a customer installation by using the call to action on each row. For more information on the installations table
      <a>
         see here
      </a>
      .
    </p>
    <div
      class="ec47sgk-el-mb11 elkdvoz-el-table"
      data-has-call-to-action="true"
      data-has-expandable-action="false"
      data-num-columns-excl-action-col="5"
    >
      <div
        class="e1co3p83-el-table-headers-row"
      >
        <div
          class="e1qy4g2u-el-table-header"
        >
          Customer Name
        </div>
        <div
          class="e1qy4g2u-el-table-header"
        >
          Reapit Customer Code
        </div>
        <div
          class="e1qy4g2u-el-table-header"
        >
          Customer Address
        </div>
        <div
          class="e1qy4g2u-el-table-header"
        >
          Date Installed
        </div>
        <div
          class="e1qy4g2u-el-table-header"
        >
          Installed By
        </div>
        <div
          class="e1qy4g2u-el-table-header"
        >
          Uninstall
        </div>
      </div>
      <div
        class="e1gfmg2g-el-table-row-container"
      >
        <div
          class="es3tf1j-el-table-row"
        >
          <div
            class="eqy88gj-el-table-cell-has-dark-text e4zpaja-el-table-cell"
          >
            <span
              class="epibvz0-el-intent-secondary ej9yrfo-el-icon"
            >
              <svg
                fill="none"
                height="1em"
                viewBox="0 0 20 20"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M20 20H11V4H20V16.264V20Z"
                  fill="#7BC9EB"
                />
                <path
                  d="M13 2H11.3572L10 9.05535L11.3574 20H13V2Z"
                  fill="#0061A8"
                />
                <path
                  d="M1.27977 0V1.78715H0V20H12V0H1.27977Z"
                  fill="#23A4DE"
                />
                <path
                  d="M3.61719 4.50488H5.14902V6.38001H3.61719V4.50488Z"
                  fill="#F3FFFB"
                />
                <path
                  d="M7.43005 4.50488H8.96188V6.38001H7.43005V4.50488Z"
                  fill="#F3FFFB"
                />
                <path
                  d="M3.61719 8.25513H5.14902V10.1303H3.61719V8.25513Z"
                  fill="#F3FFFB"
                />
                <path
                  d="M7.43005 8.25513H8.96188V10.1303H7.43005V8.25513Z"
                  fill="#F3FFFB"
                />
                <path
                  d="M3.61719 12.0056H5.14902V13.8807H3.61719V12.0056Z"
                  fill="#F3FFFB"
                />
                <path
                  d="M7.43005 12.0056H8.96188V13.8807H7.43005V12.0056Z"
                  fill="#F3FFFB"
                />
                <path
                  d="M3.61719 15.7559H5.14902V17.631H3.61719V15.7559Z"
                  fill="#F3FFFB"
                />
                <path
                  d="M7.43005 15.7559H8.96188V17.631H7.43005V15.7559Z"
                  fill="#F3FFFB"
                />
                <path
                  d="M14.7491 8.25513H16.281V10.1303H14.7491V8.25513Z"
                  fill="#23A4DE"
                />
                <path
                  d="M14.7491 12.0056H16.281V13.8807H14.7491V12.0056Z"
                  fill="#23A4DE"
                />
              </svg>
            </span>
            <div
              class="e1t8i3z1-el-table-cell-content"
              data-narrow-label="Customer Name"
            >
              Reapit Sales
            </div>
          </div>
          <div
            class="e4zpaja-el-table-cell"
          >
            <div
              class="e1t8i3z1-el-table-cell-content"
              data-narrow-label="Reapit Customer Code"
            >
              RES
            </div>
          </div>
          <div
            class="e4zpaja-el-table-cell"
          >
            <div
              class="e1t8i3z1-el-table-cell-content"
              data-narrow-label="Customer Address"
            >
              1 Big House Something Something UK BB1 1BB
            </div>
          </div>
          <div
            class="e4zpaja-el-table-cell"
          >
            <div
              class="e1t8i3z1-el-table-cell-content"
              data-narrow-label="Date Installed"
            >
              23-03-2022
            </div>
          </div>
          <div
            class="e4zpaja-el-table-cell"
          >
            <div
              class="e1t8i3z1-el-table-cell-content"
              data-narrow-label="Installed By"
            >
              <a
                href="mailto:example@mail.com?subject=Your%20recent%20installation%20of%20will-test-dev-co-voracious-person%20in%20the%20Reapit%20AppMarket"
                rel="noreferrer"
                target="_blank"
              >
                example@mail.com
              </a>
            </div>
          </div>
          <div
            class="e1fmntjl-el-table-cta-cell"
          >
            <div
              class="ewmoxzc-el-table-cta-icon-container"
            >
              <span
                class="ebee6r1-el-intent-primary ej9yrfo-el-icon"
                style="font-size: 1.2rem;"
              >
                <svg
                  fill="none"
                  height="1em"
                  viewBox="0 0 20 20"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M16.5625 2.5H13.125V1.875C13.125 0.841133 12.2839 0 11.25 0H8.75C7.71613 0 6.875 0.841133 6.875 1.875V2.5H3.4375C2.57594 2.5 1.875 3.20094 1.875 4.0625V6.25C1.875 6.59516 2.15484 6.875 2.5 6.875H2.84156L3.38152 18.2142C3.42922 19.2156 4.25187 20 5.25437 20H14.7456C15.7482 20 16.5708 19.2156 16.6185 18.2142L17.1584 6.875H17.5C17.8452 6.875 18.125 6.59516 18.125 6.25V4.0625C18.125 3.20094 17.4241 2.5 16.5625 2.5ZM8.125 1.875C8.125 1.53039 8.40539 1.25 8.75 1.25H11.25C11.5946 1.25 11.875 1.53039 11.875 1.875V2.5H8.125V1.875ZM3.125 4.0625C3.125 3.8902 3.2652 3.75 3.4375 3.75H16.5625C16.7348 3.75 16.875 3.8902 16.875 4.0625V5.625C16.6824 5.625 3.92316 5.625 3.125 5.625V4.0625ZM15.3699 18.1547C15.354 18.4885 15.0798 18.75 14.7456 18.75H5.25437C4.9202 18.75 4.64598 18.4885 4.63012 18.1547L4.09297 6.875H15.907L15.3699 18.1547Z"
                    fill="currentColor"
                  />
                  <path
                    d="M10 17.5C10.3452 17.5 10.625 17.2202 10.625 16.875V8.75C10.625 8.40484 10.3452 8.125 10 8.125C9.65484 8.125 9.375 8.40484 9.375 8.75V16.875C9.375 17.2202 9.6548 17.5 10 17.5Z"
                    fill="currentColor"
                  />
                  <path
                    d="M13.125 17.5C13.4702 17.5 13.75 17.2202 13.75 16.875V8.75C13.75 8.40484 13.4702 8.125 13.125 8.125C12.7798 8.125 12.5 8.40484 12.5 8.75V16.875C12.5 17.2202 12.7798 17.5 13.125 17.5Z"
                    fill="currentColor"
                  />
                  <path
                    d="M6.875 17.5C7.22016 17.5 7.5 17.2202 7.5 16.875V8.75C7.5 8.40484 7.22016 8.125 6.875 8.125C6.52984 8.125 6.25 8.40484 6.25 8.75V16.875C6.25 17.2202 6.5298 17.5 6.875 17.5Z"
                    fill="currentColor"
                  />
                </svg>
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="e1gfmg2g-el-table-row-container"
      >
        <div
          class="es3tf1j-el-table-row"
        >
          <div
            class="eqy88gj-el-table-cell-has-dark-text e4zpaja-el-table-cell"
          >
            <span
              class="epibvz0-el-intent-secondary ej9yrfo-el-icon"
            >
              <svg
                fill="none"
                height="1em"
                viewBox="0 0 20 20"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M20 20H11V4H20V16.264V20Z"
                  fill="#7BC9EB"
                />
                <path
                  d="M13 2H11.3572L10 9.05535L11.3574 20H13V2Z"
                  fill="#0061A8"
                />
                <path
                  d="M1.27977 0V1.78715H0V20H12V0H1.27977Z"
                  fill="#23A4DE"
                />
                <path
                  d="M3.61719 4.50488H5.14902V6.38001H3.61719V4.50488Z"
                  fill="#F3FFFB"
                />
                <path
                  d="M7.43005 4.50488H8.96188V6.38001H7.43005V4.50488Z"
                  fill="#F3FFFB"
                />
                <path
                  d="M3.61719 8.25513H5.14902V10.1303H3.61719V8.25513Z"
                  fill="#F3FFFB"
                />
                <path
                  d="M7.43005 8.25513H8.96188V10.1303H7.43005V8.25513Z"
                  fill="#F3FFFB"
                />
                <path
                  d="M3.61719 12.0056H5.14902V13.8807H3.61719V12.0056Z"
                  fill="#F3FFFB"
                />
                <path
                  d="M7.43005 12.0056H8.96188V13.8807H7.43005V12.0056Z"
                  fill="#F3FFFB"
                />
                <path
                  d="M3.61719 15.7559H5.14902V17.631H3.61719V15.7559Z"
                  fill="#F3FFFB"
                />
                <path
                  d="M7.43005 15.7559H8.96188V17.631H7.43005V15.7559Z"
                  fill="#F3FFFB"
                />
                <path
                  d="M14.7491 8.25513H16.281V10.1303H14.7491V8.25513Z"
                  fill="#23A4DE"
                />
                <path
                  d="M14.7491 12.0056H16.281V13.8807H14.7491V12.0056Z"
                  fill="#23A4DE"
                />
              </svg>
            </span>
            <div
              class="e1t8i3z1-el-table-cell-content"
              data-narrow-label="Customer Name"
            >
              Foo Bar
            </div>
          </div>
          <div
            class="e4zpaja-el-table-cell"
          >
            <div
              class="e1t8i3z1-el-table-cell-content"
              data-narrow-label="Reapit Customer Code"
            >
              MXX
            </div>
          </div>
          <div
            class="e4zpaja-el-table-cell"
          >
            <div
              class="e1t8i3z1-el-table-cell-content"
              data-narrow-label="Customer Address"
            >
              1 Big House Something Something UK BB1 1BB
            </div>
          </div>
          <div
            class="e4zpaja-el-table-cell"
          >
            <div
              class="e1t8i3z1-el-table-cell-content"
              data-narrow-label="Date Installed"
            >
              11-01-2022
            </div>
          </div>
          <div
            class="e4zpaja-el-table-cell"
          >
            <div
              class="e1t8i3z1-el-table-cell-content"
              data-narrow-label="Installed By"
            >
              <a
                href="mailto:example@mail.com?subject=Your%20recent%20installation%20of%20will-test-dev-co-voracious-person%20in%20the%20Reapit%20AppMarket"
                rel="noreferrer"
                target="_blank"
              >
                example@mail.com
              </a>
            </div>
          </div>
          <div
            class="e1fmntjl-el-table-cta-cell"
          >
            <div
              class="ewmoxzc-el-table-cta-icon-container"
            >
              <span
                class="ebee6r1-el-intent-primary ej9yrfo-el-icon"
                style="font-size: 1.2rem;"
              >
                <svg
                  fill="none"
                  height="1em"
                  viewBox="0 0 20 20"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M16.5625 2.5H13.125V1.875C13.125 0.841133 12.2839 0 11.25 0H8.75C7.71613 0 6.875 0.841133 6.875 1.875V2.5H3.4375C2.57594 2.5 1.875 3.20094 1.875 4.0625V6.25C1.875 6.59516 2.15484 6.875 2.5 6.875H2.84156L3.38152 18.2142C3.42922 19.2156 4.25187 20 5.25437 20H14.7456C15.7482 20 16.5708 19.2156 16.6185 18.2142L17.1584 6.875H17.5C17.8452 6.875 18.125 6.59516 18.125 6.25V4.0625C18.125 3.20094 17.4241 2.5 16.5625 2.5ZM8.125 1.875C8.125 1.53039 8.40539 1.25 8.75 1.25H11.25C11.5946 1.25 11.875 1.53039 11.875 1.875V2.5H8.125V1.875ZM3.125 4.0625C3.125 3.8902 3.2652 3.75 3.4375 3.75H16.5625C16.7348 3.75 16.875 3.8902 16.875 4.0625V5.625C16.6824 5.625 3.92316 5.625 3.125 5.625V4.0625ZM15.3699 18.1547C15.354 18.4885 15.0798 18.75 14.7456 18.75H5.25437C4.9202 18.75 4.64598 18.4885 4.63012 18.1547L4.09297 6.875H15.907L15.3699 18.1547Z"
                    fill="currentColor"
                  />
                  <path
                    d="M10 17.5C10.3452 17.5 10.625 17.2202 10.625 16.875V8.75C10.625 8.40484 10.3452 8.125 10 8.125C9.65484 8.125 9.375 8.40484 9.375 8.75V16.875C9.375 17.2202 9.6548 17.5 10 17.5Z"
                    fill="currentColor"
                  />
                  <path
                    d="M13.125 17.5C13.4702 17.5 13.75 17.2202 13.75 16.875V8.75C13.75 8.40484 13.4702 8.125 13.125 8.125C12.7798 8.125 12.5 8.40484 12.5 8.75V16.875C12.5 17.2202 12.7798 17.5 13.125 17.5Z"
                    fill="currentColor"
                  />
                  <path
                    d="M6.875 17.5C7.22016 17.5 7.5 17.2202 7.5 16.875V8.75C7.5 8.40484 7.22016 8.125 6.875 8.125C6.52984 8.125 6.25 8.40484 6.25 8.75V16.875C6.25 17.2202 6.5298 17.5 6.875 17.5Z"
                    fill="currentColor"
                  />
                </svg>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="e1nnyshg-el-pagination-wrap"
    >
      <div
        class="ex6bmfc-el-pagination-text"
      >
        <strong>
          1
        </strong>
         of 
        1
      </div>
      <button
        class="e1yynswi-el-pagination-button"
        data-testid="back-button"
        type="button"
      >
        <span
          class="ej9yrfo-el-icon"
        >
          <svg
            fill="none"
            height="1em"
            viewBox="0 0 12 12"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M2 5.5L8 9.39711L8 1.60289L2 5.5Z"
              fill="currentColor"
            />
          </svg>
        </span>
      </button>
      <button
        class="e1yynswi-el-pagination-button"
        data-testid="forward-button"
        type="button"
      >
        <span
          class="ej9yrfo-el-icon"
        >
          <svg
            fill="none"
            height="1em"
            viewBox="0 0 12 12"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M9 5.5L3 9.39711L3 1.60289L9 5.5Z"
              fill="currentColor"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
